--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,11 @@
   margin: auto;
 }
 
+h1 {
+  font-size: 25px;
+  text-transform: uppercase;
+}
+
 .input-wrapper input {
   width: 100%;
   outline: none;
